--- a/package.json
+++ b/package.json
@@ -9,12 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "apexcharts": "^3.36.1",
+    "axios": "^1.1.3",
+    "framer-motion": "^7.6.4",
     "next": "13.0.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "react-hook-form": "^7.39.1",
+    "react-icons": "^4.6.0",
+    "react-query": "^3.39.2",
+    "typescript": "4.8.4",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "miragejs": "^0.1.45"
   }
 }
